--- a/mcacountdown/beta/timer.html
+++ b/mcacountdown/beta/timer.html
@@ -726,7 +726,7 @@ function hour(){
     setCookie('hour', 'true', '70');
         eraseCookie('second');
     eraseCookie('day');
-    eraseCookie('hour');
+    eraseCookie('minute');
   }
 }
 function minute(){
