--- a/mcacountdown/beta/timer.html
+++ b/mcacountdown/beta/timer.html
@@ -22,17 +22,17 @@
 </center>
 
 <center class="hidden" id="unfocused" style="margin: 0; position: absolute; top: 50%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
-<h1>Focus Lost</h1>
-<p>We can't guarantee an accurate countdown if the tab loses focus.<br>To resync the countdown, click this button or reload the page.<br>Enable "Autosync Clock" in the options menu to skip this page.</p>
+<h1 class="textelement">Focus Lost</h1>
+<p class="textelement">We can't guarantee an accurate countdown if the tab loses focus.<br>To resync the countdown, click this button or reload the page.<br>Enable "Autosync Clock" in the options menu to skip this page.</p>
 <br>
 <br>
 <a href="">Sync Countdown</a>
 </center>
 
 <center class="hidden" id="settings" style="margin: 0; position: absolute; left: 50%; -ms-transform: translate(-50%, 0%); transform: translate(-50%, 0%);">
-  <h1>Options</h1>
+  <h1 class="textelement">Options</h1>
 
-  <p style="font-size: 15px; color:#989898">By using these options, you agree to cookies, extremely small files that store preferences in a browser. They will automatically be removed after 70 days, or if you disable the setting.</p>
+  <p class="textelement" style="font-size: 15px; color:#989898">By using these options, you agree to cookies, extremely small files that store preferences in a browser. They will automatically be removed after 70 days, or if you disable the setting.</p>
   <br>
   <Br>
     <a style="margin-right:10px;" onclick="settings();">Close</a>  
@@ -41,15 +41,10 @@
     <Br>
       <br>
       <br>
-      <h2>Ease of Use</h1>
+      <h2 class="textelement">Ease of Use</h1>
     <br>
     <Br>
   <a id="arorf" class="disabled" onclick="arorf();">Autosync Clock</a>
-  <br>
-  <br>
-  <br>
-  <br>
-  <a id="ocwd" class="disabled" onclick="ocwd();">Don't Include Weekends</a>
   <br>
   <br>
   <br>
@@ -58,7 +53,7 @@
   <br>
   <br>
   <Br>
-  <h2>Only Include</h1>
+  <h2 class="textelement">Only Include</h1>
 <br>
 <br>
     <a id="day" style="margin-right:10px;" class="disabled" onclick="day();">Day</a>
@@ -68,7 +63,7 @@
     <br>
     <br>
     <Br>
-    <h2>Accessibility</h1>
+    <h2 class="textelement">Accessibility</h1>
   <br>
   <br>
   <a id="coce" class="disabled" onclick="coce();">Disable Confetti</a>
@@ -81,7 +76,6 @@
   <br>
   <br>
   <br>
-  <a id="lct" class="disabled" onclick="lct();">Prefer Light Theme</a>
   <br>
   <br>
   <br>
@@ -93,7 +87,7 @@
   </center>
 
   <center class="hidden" id="ad_container" style="border-radius: 20px; margin: 0; position: absolute; top: 88%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
-    <p id="maintainedtext">This AD is promoted in order to maintain the site and cannot be hidden.</p>
+    <p class="textelement" id="maintainedtext">This AD is promoted in order to maintain the site and cannot be hidden.</p>
     <video id="ad" autoplay muted loop>
       <source src="ad.mp4" type="video/mp4">
     </video>
@@ -428,7 +422,6 @@
 document.getElementById("body").style.overflowY = 'hidden';
 document.getElementById("gear").classList.remove("hidden");
 
-
 function setCookie(name,value,days) {
     var expires = "";
     if (days) {
@@ -492,7 +485,7 @@ function settings(){
     document.getElementById("settings").classList.add("hidden");
     document.getElementById("gear").classList.remove("hidden");
     document.getElementById("preloader").classList.add("hidden");
-    //document.getElementById("ad_container").classList.remove("hidden");
+    document.getElementById("ad_container").classList.remove("hidden");
     document.getElementById("unfocused").classList.add("hidden");
 
     document.getElementById("body").style.overflowY = 'hidden';
@@ -502,7 +495,7 @@ function settings(){
 
 var countDownDate = new Date("May 25, 2023 15:00:00").getTime();
 
-//document.getElementById("ad_container").classList.remove("hidden");
+document.getElementById("ad_container").classList.remove("hidden");
 
 var x = setInterval(function() {
 
@@ -530,14 +523,7 @@ var x = setInterval(function() {
   document.getElementById("lcdu").classList.remove("enabled");
   document.getElementById("lcdu").classList.add("disabled");
   }
-  if (getCookie("ocwd")) {
-  document.getElementById("ocwd").classList.add("enabled");
-  document.getElementById("ocwd").classList.remove("disabled");
-  }
-  else{
-  document.getElementById("ocwd").classList.remove("enabled");
-  document.getElementById("ocwd").classList.add("disabled");
-  }
+
   if (getCookie("atc")) {
     document.getElementById("atc").classList.add("enabled");
   document.getElementById("atc").classList.remove("disabled");
@@ -550,6 +536,9 @@ var x = setInterval(function() {
   document.getElementById("clock").classList.add("clock");
   document.getElementById("clock").classList.remove("staticclock");
   }
+
+
+
 
     if (getCookie("second")) {
     document.getElementById("second").classList.add("enabled");
@@ -613,8 +602,23 @@ var x = setInterval(function() {
    // return count;
 //}
 
-
-  if(getCookie("lcdu")) {
+  if(getCookie("day")) {
+    var daycount = Math.floor(distance / 4173376613);
+    document.getElementById("clock").innerHTML = daycount + " days";
+  }
+  else if(getCookie("hour")) {
+    var hourcount = Math.floor(distance / 3600000);
+    document.getElementById("clock").innerHTML = hourcount + " hours";
+  }
+  else if(getCookie("minute")) {
+    var minutecount = Math.floor(distance / 60000);
+    document.getElementById("clock").innerHTML = minutecount + " minutes";
+  }
+  else if(getCookie("second")) {
+        var secondcount = Math.floor(distance / 1000);
+    document.getElementById("clock").innerHTML = secondcount + " seconds";
+  }
+  else if(getCookie("lcdu")) {
     if(days > 0){
     document.getElementById("clock").innerHTML = days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
     document.getElementById("clock").style.fontSize = '75px';
@@ -650,7 +654,6 @@ var x = setInterval(function() {
     document.getElementById("clock").style.fontSize = '175px';
    }
   }
-
 
 
   if (distance < 0) {
@@ -690,14 +693,7 @@ function atc(){
     setCookie('atc', 'true', '70');
   }
 }
-function ocwd(){
-  if(getCookie('ocwd')){
-    eraseCookie('ocwd');
-  }
-  else{
-    setCookie('ocwd', 'true', '70');
-  }
-}
+
 function lcdu(){
   if(getCookie('lcdu')){
     eraseCookie('lcdu');
@@ -706,6 +702,8 @@ function lcdu(){
     setCookie('lcdu', 'true', '70');
   }
 }
+
+
 
 function day(){
   if(getCookie('day')){
@@ -755,7 +753,6 @@ function resetcookies(){
   eraseCookie('arorf');
   eraseCookie('coce');
   eraseCookie('atc');
-  eraseCookie('ocwd');
   eraseCookie('minute');
   eraseCookie('second');
     eraseCookie('day');
