--- a/mcacountdown/beta/timer.html
+++ b/mcacountdown/beta/timer.html
@@ -74,38 +74,38 @@
       <h2 class="textelement">Ease of Use</h1>
     <br>
     <Br>
-  <a id="memsav" class="disabled" onclick="memsav();">Memory Saver</a>
+  <a id="memsav" class="disabled" onclick="memsav();"><i class="fa-solid fa-gauge-high"></i> Memory Saver</a>
   <br>
   <br>
   <br>
   <br>
-  <a id="lcdu" class="disabled" onclick="lcdu();">Label Countdown Units</a>
+  <a id="lcdu" class="disabled" onclick="lcdu();"><i class="fa-solid fa-tag"></i> Label Countdown Units</a>
   <br>
   <br>
   <Br>
   <h2 class="textelement">Only Include</h1>
 <br>
 <br>
-    <a id="day" style="margin-right:10px;" class="disabled" onclick="day();">Day</a>
-        <a id="hour" style="margin-right:10px;" class="disabled" onclick="hour();">Hour</a>
+    <a id="day" style="margin-right:10px;" class="disabled" onclick="day();"><i class="fa-solid fa-calendar-days"></i> Day</a>
+        <a id="hour" style="margin-right:10px;" class="disabled" onclick="hour();"><i class="fa-solid fa-clock"></i> Hour</a>
           <br>
   <br>
   <br>
   <br>
-    <a id="minute" style="margin-right:10px;" class="disabled" onclick="minute();">Minute</a>
-    <a id="second" style="margin-right:10px;" class="disabled" onclick="second();">Second</a>
+    <a id="minute" style="margin-right:10px;" class="disabled" onclick="minute();"><i class="fa-solid fa-hourglass-start"></i> Minute</a>
+    <a id="second" style="margin-right:10px;" class="disabled" onclick="second();"><i class="fa-solid fa-stopwatch-20"></i> Second</a>
     <br>
     <br>
     <Br>
     <h2 class="textelement">Accessibility</h1>
   <br>
   <br>
-  <a id="coce" class="disabled" onclick="coce();">Disable Confetti</a>
+  <a id="coce" class="disabled" onclick="coce();"><i class="fa-solid fa-cake-candles"></i> Disable Confetti</a>
   <br>
   <br>
   <br>
   <br>
-  <a id="atc" class="disabled" onclick="atc();">Disable Text Animation</a>
+  <a id="atc" class="disabled" onclick="atc();"><i class="fa-solid fa-palette"></i> Disable Text Animation</a>
   <br>
   <br>
   <br>
