--- a/mcacountdown/beta/unfinal.html
+++ b/mcacountdown/beta/unfinal.html
@@ -293,6 +293,7 @@
   font-weight: 100;
       margin: 0px 0px 0px 0px;
     display:initial;
+    position:relative;
   }
     .outlinebutton{
     font-family: 'Fredoka One';
@@ -310,9 +311,8 @@
   }
   a:hover{
     position:relative;
-    top:2px;
+    top:4px;
     box-shadow:0 5px 0 #4d00b2;
-    margin: 2px 10px 48px 10px;
     display:inline-block;
   }
   .a2:hover{
@@ -324,9 +324,8 @@
   }
   a:hover:active{
     position:relative;
-    top:7px;
+    top:9px;
     box-shadow:none;
-        margin: 7px 10px 43px 10px;
     display:inline-block;
   }
     .a2:hover:active{
@@ -350,14 +349,11 @@
   }
   .enabled:hover{
     position:relative;
-    top:2px;
-    margin-top: 2px;
     box-shadow:0 5px 0 #008f2d;
   }
   .enabled:hover:active{
     position:relative;
-    top:7px;
-    margin-top: 7px;
+
     box-shadow:none;
   }
 
@@ -376,14 +372,12 @@
   }
   .disabled:hover{
     position:relative;
-    top:2px;
-    margin-top: 2px;
+
     box-shadow:0 5px 0 #282828;
   }
   .disabled:hover:active{
     position:relative;
-    top:7px;
-    margin-top: 7px;
+
     box-shadow:none;
   }
 
@@ -403,14 +397,12 @@
   }
   .warning:hover{
     position:relative;
-    top:2px;
-    margin-top: 2px;
+
     box-shadow:0 5px 0 #d00000;
   }
   .warning:hover:active{
     position:relative;
-    top:7px;
-    margin-top: 7px;
+
     box-shadow:none;
   }
 
