--- a/404.html
+++ b/404.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 <script src="app.js"></script>
   <link rel="icon" type="image/x-icon" href="Images/fav.ico">
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8617127534193636"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
