--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <script src="app.js"></script>
 <link rel="icon" type="image/x-icon" href="Images/fav.ico">
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8617127534193636"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
