--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -6,6 +6,8 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,0" />
 <link rel="icon" type="image/x-icon" href="icon.ico">
 <title>Countdown</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8617127534193636"
+     crossorigin="anonymous"></script>
 </head>
 
 <body id="body" style="background-color:#141414;  overflow-x:hidden;">
