--- a/old/oldportfolio.html
+++ b/old/oldportfolio.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,600;0,700;0,800;1,400&family=Rajdhani:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/all.css" type='text/css' />
     <link rel="icon" type="image/x-icon" href="Images/fav.ico" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8617127534193636"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <section class="header" id="myHeader">
